--- a/.hintrc
+++ b/.hintrc
@@ -16,5 +16,8 @@
     "defaults",
     "not ie 11",
     "not safari <= 9.1"
+    "not safari <= 9.1",
+    "not ios_saf <= 16.5",
+    "not safari <= 16.5"
   ]
 }
