Trying an other method to publish Gitpages - reset of initial routes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://drfr34.github.io/Kasa/",
+  "homepage": "https://drfr34.github.io",
   "name": "kasa",
   "version": "0.1.0",
   "private": true,
