--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://drfr34.github.io",
   "name": "kasa",
+  "homepage": "https://drfr34.github.io/Kasa/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,8 +17,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
