--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kasa",
-  "homepage": "https://drfr34.github.io/Kasa/",
+  "homepage": "https://drfr34.github.io/Kasa",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
